--- a/src/styles/base/ant.scss
+++ b/src/styles/base/ant.scss
@@ -46,3 +46,12 @@
         border-radius: 1rem !important;
     }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
